<resources>
    <string name="app_name">My Company</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="label">MyCompany</string>
    <string name="middlename">Отчество</string>
    <string name="firstname">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="change_password">Изменить пароль</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">Email</string>
    <string name="logout">Выйти</string>
    <string name="change_user_data">Изменить данные</string>
    <string name="phone_number">Номер</string>
    <string name="old_password">Введите свой пароль</string>
    <string name="new_password">Введите новый пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="user_name">User name</string>
    <string name="message_text">Message text</string>
    <string name="sample_receiver">sample receiver</string>
    <string name="sample_text">sample text</string>
    <string name="sample_time">20:00 20.01.1900</string>
    <string name="register">Зарегистрировать пользователя</string>
    <string name="name">Имя</string>
    <string name="initials">Иванов Иван Иванович</string>
    <string name="user_role">Роль</string>
    <string name="email_template">test@email.test</string>
    <string name="create_chat">Создать чат</string>
    <string name="name_of_chat">Введите название чата</string>
    <string name="users_count">Users count</string>
    <string name="chat_name">Chat name</string>
    <string name="add_user">Добавить пользователя</string>
    <string name="responsible">Исполнитель:</string>
    <string name="deadline">Дедлайн:</string>
    <string name="status">Статус</string>
    <string name="listOfTasks">Список задач</string>
    <string name="addTask">Добавить задачу</string>
    <string name="creator">Постановщик:</string>
    <string name="creation_date">Дата создания:</string>
    <string name="editStatus">Сменить статус</string>
    <string name="change">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="members">Участники:</string>
    <string name="update_members">Изменить пользователей</string>
    <string name="delete_members">Удалить пользователей</string>
    <string name="add_members">Добавить пользователей</string>
    <string name="change_task">Изменить задачу</string>
    <string name="add_executor">Добавить исполнителя</string>
    <string name="description_hint">Введите описание задачи</string>
    <string name="hint_task_name">Введите название задачи</string>
    <string name="deadline_hint">Выберите дату дедлайна</string>
    <string name="choose_executor">Выберите исполнителя</string>
    <string name="create_task">Создать задачу</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_executor">Изменить исполнителя</string>
    <string name="change_executor">Изменить исполнителя</string>
    <string name="roles_edit">Управление ролями</string>
    <string name="users_edit">Управление пользователями</string>
    <string name="chat_edit">Управление чатами</string>
    <string name="rolename">RoleName</string>
    <string name="permission">permission</string>
    <string name="role">Роль</string>
    <string name="username">Username</string>


</resources>