<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="50dp"
    tools:context=".fragments.auth.RegistrationFragment">


    <EditText
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email" />


    <EditText
        android:id="@+id/firstnameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/lastnameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastname" />

    <EditText
        android:id="@+id/middlenameText"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:hint="@string/middlename" />

    <EditText
        android:id="@+id/phoneNumberText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/RegButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:background="@drawable/conner"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</androidx.appcompat.widget.LinearLayoutCompat>