<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragments.service.OneUserFragment">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"

            android:text="@string/firstname"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/firstnameOneUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="0.6"
            android:width="1dp"
            android:background="@color/white"
            android:gravity="end"
            android:textColor="@color/blue"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"

            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/lastname"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/lastnameOneUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="0.6"
            android:background="@color/white"
            android:gravity="end"
            android:textColor="@color/blue"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/middlename"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/middlenameOneUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:width="1dp"
            android:background="@color/white"
            android:gravity="end"
            android:textColor="@color/blue"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/phone_number"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/phoneOneUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:width="1dp"
            android:background="@color/white"
            android:gravity="end"
            android:textColor="@color/blue"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/email"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/emailOneUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="@color/white"
            android:gravity="end"
            android:textColor="@color/blue"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/role"
            android:textStyle="italic" />

        <Spinner
            android:id="@+id/roleOneUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="@color/white"
            android:gravity="end"
            android:textColor="@color/blue"
            android:textStyle="bold" />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changeButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:background="@drawable/corner"
        android:text="@string/change_user_data"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changePasswordButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:background="@drawable/corner"
        android:text="@string/change_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/deleteButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:background="@drawable/corner"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.appcompat.widget.LinearLayoutCompat>