<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.profile.ProfileFragment"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="100dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="50dp"/>


        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/firstname"
                android:textStyle="italic"/>

            <EditText
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="1dp"
                android:gravity="end"
                android:id="@+id/firstnameProfile"
                android:textStyle="bold"
                android:textColor="@color/green"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/lastname"
                android:textStyle="italic"/>

            <EditText
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:id="@+id/lastnameProfile"
                android:textStyle="bold"
                android:textColor="@color/green"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/middlename"
                android:textStyle="italic"/>

            <EditText
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="1dp"

                android:gravity="end"
                android:id="@+id/middlenameProfile"
                android:textStyle="bold"
                android:textColor="@color/green"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textStyle="italic"/>

            <EditText
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="1dp"
                android:gravity="end"
                android:id="@+id/phoneProfile"
                android:textStyle="bold"
                android:textColor="@color/green"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textStyle="italic"/>

            <EditText
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:id="@+id/emailProfile"
                android:textStyle="bold"
                android:textColor="@color/green"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/changeButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/change_user_data"
            android:background="@drawable/conner"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:textColor="@color/white"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/changePasswordButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:background="@drawable/conner"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:textColor="@color/white"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logoutButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:background="@drawable/conner"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:textColor="@color/white"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>