<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.auth.AuthFragment"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="200dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:gravity="center"
            android:layout_marginTop="25dp"/>

        <EditText
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:backgroundTint="@color/black"
            android:drawableStart="@drawable/log"
            android:hint="@string/email"
            />

        <EditText
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            
            android:id="@+id/password"
            android:drawableStart="@drawable/pass"
            android:hint="@string/password"
            android:inputType="textPassword"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/auth_button"
            android:layout_gravity="center"
            android:background="@drawable/corner"
            android:layout_marginTop="20dp"
            android:text="Авторизация"
            android:textColor="@color/white"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>