<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_profile">

    <fragment
        android:id="@+id/navigation_services"
        android:name="com.ggg.gggapp.fragments.service.ServicesFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_services" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.ggg.gggapp.fragments.news.NewsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.ggg.gggapp.fragments.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_registrationFragment"
            app:destination="@id/registrationFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.ggg.gggapp.fragments.chat.ChatFragment"
        android:label="fragment_chat"
        tools:layout="@layout/fragment_chat" >
        <action
            android:id="@+id/action_navigation_chat_to_oneChatFragment"
            app:destination="@id/oneChatFragment" />
        <action
            android:id="@+id/action_navigation_chat_to_createChatFragment"
            app:destination="@id/createChatFragment" />
    </fragment>
    <fragment
        android:id="@+id/oneChatFragment"
        android:name="com.ggg.gggapp.fragments.chat.OneChatFragment"
        android:label="fragment_one_chat"
        tools:layout="@layout/fragment_one_chat" />
    <fragment
        android:id="@+id/registrationFragment"
        android:name="com.ggg.gggapp.fragments.auth.RegistrationFragment"
        android:label="fragment_reg"
        tools:layout="@layout/fragment_reg" />
    <fragment
        android:id="@+id/createChatFragment"
        android:name="com.ggg.gggapp.fragments.chat.CreateChatFragment"
        android:label="fragment_create_chat"
        tools:layout="@layout/fragment_create_chat" />
</navigation>